Change space of function

--- a/milestone_2.ipynb
+++ b/milestone_2.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "id": "13f852a3-92cc-4d40-bd61-aab122583eeb",
    "metadata": {
     "pycharm": {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "5166e01e-48ac-49f7-a280-315bdd2f1156",
    "metadata": {
     "pycharm": {
@@ -261,7 +261,7 @@
        "4                            {\"/m/07s9rl0\": \"Drama\"}  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "id": "85b96b26-1100-4d86-bb8b-49e65512e950",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "id": "01efe5fb-e343-4b03-83bf-7c178249dea6",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
        "genres                          0           0.000000"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "id": "62ca2757-b726-446c-9cbb-a8aee512b4d7",
    "metadata": {
     "pycharm": {
@@ -458,7 +458,7 @@
        "Name: languages, Length: 207, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "id": "d9f21256-6522-45f8-9759-790a9153126b",
    "metadata": {
     "pycharm": {
@@ -511,7 +511,7 @@
        "Name: countries, Length: 147, dtype: int64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "id": "50a2f821-311c-4b36-a259-2cf4f575c532",
    "metadata": {},
    "outputs": [
@@ -556,7 +556,7 @@
        "Name: genres, Length: 363, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "id": "4796f0a1-35be-4588-ac8e-863d3640891a",
    "metadata": {
     "pycharm": {
@@ -759,7 +759,7 @@
        "4            /m/0bgchp9         /m/01y9xg  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "id": "ff4c36f6-2afc-44c4-a766-d879835e0ffd",
    "metadata": {},
    "outputs": [
@@ -890,7 +890,7 @@
        "freebase_actor_id                815           0.001808"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "id": "1262310a-072f-4ac4-9795-963caa0799c5",
    "metadata": {
     "pycharm": {
@@ -939,7 +939,7 @@
        "Name: actor_gender, dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "id": "ea910c1c-c0bc-4fc3-950f-5634559cfe96",
    "metadata": {
     "pycharm": {
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "id": "a154ad37-bafc-4f89-94ee-f8c7d43534ae",
    "metadata": {
     "pycharm": {
@@ -1054,7 +1054,7 @@
        "4         595909  Seventh-day Adventist Church pastor Michael Ch..."
       ]
      },
-     "execution_count": 69,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "id": "9c879607-1b1d-490a-88f3-f0703c207c13",
    "metadata": {},
    "outputs": [
@@ -1116,7 +1116,7 @@
        "plot                       0                0.0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "id": "2bbf30c4-f9cb-49d3-85bc-ecbe6b2c1cbb",
    "metadata": {
     "pycharm": {
@@ -1259,7 +1259,7 @@
        "2  Eva, an upper class housewife, becomes frustra...  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1296,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 19,
+   "id": "0914b586-bbe4-48c7-a81f-1e4e1db2b732",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_gender_ratio(s, gender):\n",
+    "    ''' \n",
+    "    Calculates the ratio gender\n",
+    "    Arg:\n",
+    "        s: Object containing all male or female actor in a genre. (M or F)\n",
+    "        gender: the gender for which the ratio should be computed for\n",
+    "    '''\n",
+    "    \n",
+    "    gender_count = 0\n",
+    "    for i in range(len(s)):\n",
+    "        if s[i] == gender:\n",
+    "            gender_count = gender_count+1\n",
+    "    return round(gender_count/len(s), 4)\n",
+    "\n",
+    "# TODO：through time\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "083a83c8-3a65-42d1-ad4f-c3f80277ab15",
    "metadata": {
     "pycharm": {
@@ -1393,7 +1417,7 @@
        "4       /m/0k3rhh     James Spader  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 32,
    "id": "9895e699-a2f0-48ec-8454-4ea2a2e2769a",
    "metadata": {},
    "outputs": [
@@ -1468,7 +1492,7 @@
        "plot                       0                0.0"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1480,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 33,
    "id": "1c6af1b7-52aa-4ac6-a82a-a0986eb1cbfe",
    "metadata": {},
    "outputs": [],
@@ -1494,23 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "931aac37-0194-465b-9e19-d611bf60e250",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# join tvtropes on actor map id to get gender\n",
-    "tvtropes = pd.merge(tvtropes, characters[['freebase_map_id','actor_gender','wiki_movie_id']],\n",
-    "                       left_on='freebase_map_id', right_on='freebase_map_id', how='left')\n",
-    "tvtropes_w_gender = tvtropes[['char_type', 'actor_gender']].groupby('char_type').agg('sum')\n",
-    "tvtropes_w_gender['female_ratio'] = tvtropes_w_gender['actor_gender'].apply(lambda x: get_female_ratio(x))\n",
-    "#tvtropes_w_gender = tvtropes_w_gender.sort_values(by='female_ratio', ascending=False)\n",
-    "tvtropes_w_gender = tvtropes_w_gender.query('female_ratio != 0').sort_values(by='female_ratio', ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 34,
    "id": "4cc6384c-9d90-468b-95f0-74a4db98b74c",
    "metadata": {},
    "outputs": [],
@@ -1521,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 35,
    "id": "0ec73f63-c049-4354-a83c-5f33d70b100d",
    "metadata": {},
    "outputs": [
@@ -1540,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 36,
    "id": "39f91f35-db2d-4883-83fc-396debf2080d",
    "metadata": {},
    "outputs": [
@@ -1551,7 +1559,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [125]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mSentiment score of female types: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mSentiment score of male types:\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[43mtvtropes_F\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msentiment\u001b[49m\u001b[38;5;241m.\u001b[39mmean(), tvtropes_M\u001b[38;5;241m.\u001b[39msentiment\u001b[38;5;241m.\u001b[39mmean()))\n",
+      "Input \u001b[1;32mIn [36]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mSentiment score of female types: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mSentiment score of male types:\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[43mtvtropes_F\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msentiment\u001b[49m\u001b[38;5;241m.\u001b[39mmean(), tvtropes_M\u001b[38;5;241m.\u001b[39msentiment\u001b[38;5;241m.\u001b[39mmean()))\n",
       "File \u001b[1;32m~\\Programme\\lib\\site-packages\\pandas\\core\\generic.py:5575\u001b[0m, in \u001b[0;36mNDFrame.__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   5568\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m   5569\u001b[0m     name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_internal_names_set\n\u001b[0;32m   5570\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_metadata\n\u001b[0;32m   5571\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_accessors\n\u001b[0;32m   5572\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_info_axis\u001b[38;5;241m.\u001b[39m_can_hold_identifiers_and_holds_name(name)\n\u001b[0;32m   5573\u001b[0m ):\n\u001b[0;32m   5574\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m[name]\n\u001b[1;32m-> 5575\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mobject\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getattribute__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'sentiment'"
      ]
