--- a/milestone_2.ipynb
+++ b/milestone_2.ipynb
@@ -1697,7 +1697,7 @@
     "    \n",
     "To link the titles of the movies and the writers/directors we need two additional dataset:\n",
     "1. title.akas.tsv.gz, that contains titles and tconst\n",
-    "2. data/name.basics.tsv.gz, that contains writers/directors id and their ids\n"
+    "2. data/name.basics.tsv.gz, that contains writers/directors id and their names"
    ]
   },
   {
@@ -3733,7 +3733,7 @@
    "id": "08d93f61-2af4-479a-a38e-23b9bc4d5fcf",
    "metadata": {},
    "source": [
-    "##### For highest male cast ratio, the genres are more \"series\" in terms of the genreal expression. Genres have more variety from action, advanture to social issues and history. "
+    "##### For highest male cast ratio, the genres are more serious in terms of the genreal expression. Genres have more variety from action, advanture to social issues and history. "
    ]
   },
   {
